Login interface ok

--- a/Front-End/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/Front-End/src/app/pages/auth/sign-in/sign-in.component.html
@@ -1,1 +1,46 @@
-<p>sign-in works!</p>
+<section class="vh-100">
+  <div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-6">
+        <img src="assets/ken.jpg" class="img-fluid" alt="Ken background" />
+      </div>
+      <div class="col-md-6">
+        <p class="title text-center">Revenez dans le royaume de Ken</p>
+        <div class="form-outline mb-4">
+            <label class="form-label" for="email">Adresse email</label>
+          <input
+            type="email"
+            id="email"
+            class="form-control"
+            placeholder="Entrer une adresse email valid"
+          />
+        </div>
+
+        <div class="form-outline mb-3">
+            <label class="form-label" for="password">Mot de passe</label>
+          <input
+            type="password"
+            id="password"
+            class="form-control"
+            placeholder="Entrer le mot de passe"
+          />
+        </div>
+
+        <div class="text-center text-lg-start mt-5 pt-2">
+          <button
+            type="button"
+            data-mdb-button-init
+            data-mdb-ripple-init
+            class="btn btn-primary btn-lg w-100"
+            style="padding-left: 2.5rem; padding-right: 2.5rem"
+          >
+            Entrer
+          </button>
+          <p class="small fw-bold mt-5 pt-1 mb-2">
+            Vous êtes nouveau ? <a href="#!" class="link-danger">Direction le royaume de Ken</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
