--- a/Front-End/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/Front-End/src/app/pages/auth/sign-in/sign-in.component.html
@@ -1,5 +1,5 @@
-<section class="vh-100">
-  <div class="container-fluid h-custom">
+<section class="vh-100 d-flex justify-content-center align-items-center">
+  <div class="container h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-6">
         <img src="assets/ken.jpg" class="img-fluid" alt="Ken background" />
