--- a/Front-End/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/Front-End/src/app/pages/auth/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<section class="vh-100 d-flex justify-content-center align-items-center">
+<section class="vh-100 d-flex justify-md-content-center align-items-md-center">
   <div class="container h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-6">
