Finish home page

--- a/Front-End/src/app/pages/home/home.component.html
+++ b/Front-End/src/app/pages/home/home.component.html
@@ -1,1 +1,37 @@
-<p>Home works well !</p>
+<section class="home">
+    <div class="title mt-5">
+        <p>Des collections extraordinaires</p>
+        <h3>Explorer les collections</h3>
+    </div>
+    
+    <div class="container">
+        <div class="row collections mt-5">
+            <app-categorie class="col-6 col-sm-6 col-md-3 mb-3"></app-categorie>
+            <app-categorie class="col-6 col-sm-6 col-md-3 mb-3"></app-categorie>
+            <app-categorie class="col-6 col-sm-6 col-md-3 mb-3"></app-categorie>
+            <app-categorie class="col-6 col-sm-6 col-md-3 mb-3"></app-categorie>
+        </div>
+    </div>
+
+    <div class="produits py-3 mt-5">
+        <div class="container">
+            <div class="title mt-3">
+                <p>Des produits d'un autre monde</p>
+                <h3>Les produits récents</h3>
+            </div>
+    
+            <div class="row mt-4">  
+                <div class="col-12 mb-4 d-flex flex-row-reverse">
+                    <button class="all-btn">    
+                        Voir plus <i class="bi bi-three-dots ms-2"></i> 
+                    </button>
+                </div>
+
+                <app-produit class="col-6 col-sm-6 col-md-3 mb-3"></app-produit>
+                <app-produit class="col-6 col-sm-6 col-md-3 mb-3"></app-produit>
+                <app-produit class="col-6 col-sm-6 col-md-3 mb-3"></app-produit>
+                <app-produit class="col-6 col-sm-6 col-md-3 mb-3"></app-produit>
+            </div>
+        </div>
+    </div>
+</section>
