--- a/Front-End/src/app/components/main-layout/footer/footer.component.html
+++ b/Front-End/src/app/components/main-layout/footer/footer.component.html
@@ -1,1 +1,45 @@
-<p>footer works!</p>
+<section class="mt-4 footer pt-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 logo mb-4">
+                <img src="assets/logo.webp" alt="">
+                <p>A spécial shop for you</p>
+                <div class="link">
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-google"></i>
+                    <i class="bi bi-linkedin"></i>
+                    <i class="bi bi-twitter"></i>
+                </div>
+            </div>
+            <div class="col-md-3 list-section mb-4">
+                <ul>
+                    <li class="list-title">Catégories</li>
+                    <li><a href="">Vêtements</a></li>
+                    <li><a href="">Voitures</a></li>
+                    <li><a href="">Meuble et décoration</a></li>
+                    <li><a href="">Lunette</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 list-section mb-4">
+                <ul>
+                    <li class="list-title">Contact</li>
+                    <li><a href="">Madagascar - Antananarivo</a></li>
+                    <li><a href="" class="mail">mamiarilaza.to&#64;gmail.com</a></li>
+                    <li><a href="" class="mail">alainricor&#64;gmail.com</a></li>
+                    <li><a href="" class="mail">tiavinagaelrakotoarison&#64;gmail.com</a></li>
+                    <li><a href="" class="mail">johanandrianaivosoa&#64;gmail.com</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 list-section mb-4">
+                <ul>
+                    <li class="list-title">About us</li>
+                    <li class="history">Chez KenShop, nous sommes déterminés à offrir une expérience de revente exceptionnelle, où la communauté des passionnés de Barbie peut se réunir, échanger et trouver les trésors de leur collection. </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="copyright">
+        <i class="bi bi-c-circle me-3"></i> Copyright 2024 ! Tech Mavericks
+    </div>
+</section>
