--- a/Front-End/src/app/pages/home/home.component.html
+++ b/Front-End/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
 <p>Home works well !</p>
+<a href="https://bff.ecoindex.fr/redirect/?url={url}" target="_blank">
+    <img src="https://bff.ecoindex.fr/badge/?theme={theme}&url={url}" alt="Ecoindex Badge" />
+</a>
