--- a/Front-End/src/app/pages/home/home.component.html
+++ b/Front-End/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <section class="home">
-    <div id="ecoindex-badge my-5"></div>
+    <div id="ecoindex-badge"></div>
     <script src="https://cdn.jsdelivr.net/gh/cnumr/ecoindex_badge@3/assets/js/ecoindex-badge.js" defer></script>
     <div class="title mt-5">
         <p>Des collections extraordinaires</p>
