--- a/Front-End/src/app/pages/home/home.component.html
+++ b/Front-End/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
+
+<app-banniere></app-banniere>
 <section class="home">
     <div class="title mt-5">
         <p>Des collections extraordinaires</p>
