Page listes des produits terminé

--- a/Front-End/src/app/pages/home/produit/produit.component.html
+++ b/Front-End/src/app/pages/home/produit/produit.component.html
@@ -3,7 +3,7 @@
         <img src="assets/images/1.jpg" alt="">
         <div class="props">
             <img src="assets/images/avatar/profile.png" alt="">
-            <div class="ms-3">par <span>Niariandratovo Solo</span></div>
+            <div class="ms-3">par <span>Andrianina</span></div>
         </div>
         <div class="name mt-3">
             Vêtements de soirée
