--- a/Front-End/src/app/pages/list-produit/list-produit.component.html
+++ b/Front-End/src/app/pages/list-produit/list-produit.component.html
@@ -1,1 +1,122 @@
-<p>list-produit works!</p>
+<div class="produits py-3 mt-1">
+    <div class="container">
+        <div class="title mt-3">
+            <p>Des produits d'un autre monde</p>
+            <h3>Listes des produits</h3>
+        </div>
+
+        <div class="row">
+            <div class="col-md-8">
+                <div class="row mt-4">
+                    <app-produit class="col-6 col-sm-6 col-md-4 mb-3"></app-produit>
+                    <app-produit class="col-6 col-sm-6 col-md-4 mb-3"></app-produit>
+                    <app-produit class="col-6 col-sm-6 col-md-4 mb-3"></app-produit>
+                    <app-produit class="col-6 col-sm-6 col-md-4 mb-3"></app-produit>
+                    <app-produit class="col-6 col-sm-6 col-md-4 mb-3"></app-produit>
+                    <app-produit class="col-6 col-sm-6 col-md-4 mb-3"></app-produit>
+
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="filter">
+                    <h4>Filtre</h4>
+                    <form class="form mt-3">
+                        <div class="mb-3">
+                            <label for="" class="form-label text-black mb-3"> <i
+                                    class="bi bi-currency-exchange me-3"></i> Filtrer par prix</label>
+                            <div class="row">
+                                <div class="col-md-6 mb-sm-3 mb-md-0">
+                                    <input type="text" class="form-control" placeholder="Min">
+                                </div>
+                                <div class="col-md-6 mb-sm-3 mb-md-0">
+                                    <input type="text" class="form-control" placeholder="Max">
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="mb-3">
+                            <label for="" class="form-label text-black mb-3"><i
+                                    class="bi bi-stack me-3"></i>Catégorie</label>
+                            <div class="row ps-2">
+                                <div class="form-check col-md-6">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Lunette
+                                    </label>
+                                </div>
+                                <div class="form-check col-md-6">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Vêtements
+                                    </label>
+                                </div>
+                                <div class="form-check col-md-6">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Meuble
+                                    </label>
+                                </div>
+                                <div class="form-check col-md-6">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Décoration
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="mb-3">
+                            <label for="" class="form-label text-black mb-3"><i
+                                    class="bi bi-star me-3"></i>Condition</label>
+                            <div class="row ps-2">
+                                <div class="form-check col-md-6">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Produit neuf
+                                    </label>
+                                </div>
+                                <div class="form-check col-md-6">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Produit usagé
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="mb-3 row lieu">
+                            <label for="" class="form-label text-black mb-3"><i
+                                    class="bi bi-geo-alt-fill me-3"></i>Lieu</label>
+                            <div class="col-md-6 mb-sm-3 mb-md-0">
+                                <select name="" class="form-select" id="">
+                                    <option value=""></option>
+                                    <option value="">Madagascar</option>
+                                    <option value="">France</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <select name="" class="form-select" id="">
+                                    <option value=""></option>
+                                    <option value="">Antananarivo</option>
+                                    <option value="">France</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="mt-4">
+                            <button>Annuler le filtre</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
