--- a/Front-End/src/styles.scss
+++ b/Front-End/src/styles.scss
@@ -6,6 +6,11 @@
     padding: 0;
 }
 
+.barbie {
+    font-family: 'Barbie', sans-serif;
+    font-size: xx-large;
+}
+
 body {
     font-family: var(--principal-font) !important;
 }
