--- a/Front-End/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/Front-End/src/app/pages/auth/sign-in/sign-in.component.html
@@ -1,11 +1,11 @@
 <section class="vh-100 d-flex justify-md-content-center align-items-md-center">
   <div class="container h-custom">
-    <div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="row d-flex flex-row-reverse justify-content-center align-items-center h-100">
       <div class="col-md-6">
-        <img src="assets/ken.jpg" class="img-fluid" alt="Ken background" />
+        <img src="assets/ken.png" class="img-fluid" alt="Ken background" />
       </div>
       <div class="col-md-6">
-        <p class="title text-center">Revenez dans le royaume de Ken</p>
+        <p class="title barbie text-center">Revenez dans le royaume de Ken</p>
         <div class="form-outline mb-4">
           <label class="form-label" for="email">Adresse email</label>
           <input
@@ -31,7 +31,7 @@
         <div class="text-center text-lg-start mt-5 pt-2">
           <button
             type="button"
-            class="btn btn-primary btn-lg w-100"
+            class="btn btn-outline-primary btn-lg w-100"
             style="padding-left: 2.5rem; padding-right: 2.5rem"
             (click)="signIn()"
           >
@@ -40,7 +40,7 @@
               class="spinner-border text-primary"
               role="status"
             ></span>
-            <ng-template #text> Entrer </ng-template>
+            <ng-template #text><p class="m-0 barbie">Entrer</p></ng-template>
           </button>
 
           <div
@@ -52,7 +52,7 @@
           </div>
           <p class="small fw-bold mt-5 pt-1 mb-2">
             Vous êtes nouveau ?
-            <a href="#!" class="link-danger">Direction le royaume de Ken</a>
+            <a [routerLink]="['/page/sign-up']" class="link-danger">Direction le royaume de Ken</a>
           </p>
         </div>
       </div>
