--- a/Front-End/src/app/components/main-layout/footer/footer.component.html
+++ b/Front-End/src/app/components/main-layout/footer/footer.component.html
@@ -1,4 +1,5 @@
-<section class="mt-4 footer pt-4">
+<section class="footer">
+    <hr class="mb-5">
     <div class="container">
         <div class="row">
             <div class="col-md-3 logo mb-4">
