--- a/Front-End/src/app/pages/token-purchase/token-purchase.component.html
+++ b/Front-End/src/app/pages/token-purchase/token-purchase.component.html
@@ -1,5 +1,5 @@
 <main class="container">
-  <header>Vous avez: 0 jeton</header>
+  <header>Vous avez: {{ user_jeton }} jeton</header>
   <section class="mt-5 px-2 row flex-row-reverse">
     <div class="col-md-6">
         <h2>Achat jetons</h2>
@@ -15,11 +15,11 @@
             <td>
               <select (ngModel)="deviseSelected" class="form-select">
                 <option *ngFor="let item of equivalenceDevises" [value]="item.id" (click)="onDeviseSelect(item)">
-                  {{ item.nom }} - {{ item.valeur }} - {{ item.created_at }} - {{ item.updated_at | date }}
+                  {{ item.nom }}
                 </option>
-                <option value="">Ariary</option>
+                <!-- <option value="">Ariary</option>
                 <option value="">Euro</option>
-                <option value="">Dollar US</option>
+                <option value="">Dollar US</option> -->
               </select>
             </td>
             <td *ngIf="deviseSelected">{{ deviseSelected.valeur }}</td>
@@ -31,17 +31,28 @@
         <h2>Prix du jeton</h2>
         <div class="input-group mb-2">
             <span class="input-group-text">Ariary</span>
-            <input type="number" class="form-control" placeholder="100" />
+            <input 
+              *ngIf="deviseSelected"
+              type="number" 
+              class="form-control"
+              value="{{ deviseSelected.valeur * nb_jeton }}"
+              disabled
+            />
             <span class="input-group-text">Up</span>
             <span class="input-group-text">Down</span>
         </div>
         <div class="input-group mb-2">
             <span class="input-group-text">Jeton</span>
-            <input type="number" class="form-control" placeholder="1" />
+            <input 
+              (ngModel)="nb_jeton" 
+              type="number" 
+              class="form-control" 
+              (change)="handleNbJeton($event)"
+            />
             <span class="input-group-text">Up</span>
             <span class="input-group-text">Down</span>
         </div>
-        <button class="btn btn-primary w-100 mt-5">Valider</button>
+        <button (click)="newJeton()" class="btn btn-primary w-100 mt-5">Valider</button>
     </div>
   </section>
 </main>
