--- a/Front-End/src/app/pages/home/produit/produit.component.html
+++ b/Front-End/src/app/pages/home/produit/produit.component.html
@@ -3,13 +3,13 @@
         <img src="assets/images/1.jpg" alt="">
         <div class="props">
             <img src="assets/images/avatar/profile.png" alt="">
-            <div class="ms-3">par <span>Andrianina</span></div>
+            <div class="ms-3">par <span>{{ utilisateur }}</span></div>
         </div>
         <div class="name mt-3">
-            Vêtements de soirée
+            {{categorie}}
         </div>
         <div class="price">
-            130.00 <span>Kc</span>
+            {{price}} <span>Kc</span>
         </div>
     </a>
 </div>
