--- a/Front-End/src/app/pages/home/categorie/categorie.component.html
+++ b/Front-End/src/app/pages/home/categorie/categorie.component.html
@@ -1,7 +1,7 @@
 <div class="collection">
     <a href="">
         <div class="collection-name">
-            <div class="">Vêtements</div>
+            <div class="">{{name}}</div>
             <div class="hover-reaction"><i class="bi bi-arrow-up-right"></i></div>
         </div>
         <img src="assets/images/categories/categories-01.webp" alt="">
