--- a/Front-End/src/app/pages/new-vente/new-vente.component.html
+++ b/Front-End/src/app/pages/new-vente/new-vente.component.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="mb-3 mt-4">
-                    <button class="btn btn-light px-5">Retour</button>
+                    <button class="btn btn-light px-5" [routerLink]="['/main/historique-vente']">Retour</button>
                     <button class="btn btn-primary ms-4 px-5">Suivant</button>
                 </div>
             </div>
