--- a/Front-End/src/app/pages/transaction/transaction.component.scss
+++ b/Front-End/src/app/pages/transaction/transaction.component.scss
@@ -1,3 +1,19 @@
+.semi-banner {
+  height: 140px;
+  background-color: var(--special-color);
+  color: white;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  p {
+      color: var(--bg-white-color);
+  }
+
+}
+
 .filter-board {
     height: fit-content;
 }
@@ -17,4 +33,8 @@ tr td p {
 .state-success {
   background-color: #4eb327;
   color: black;
+}
+
+.form-control {
+  font-size: 12px;
 }
