--- a/Front-End/src/app/pages/vente-historique/vente-historique.component.html
+++ b/Front-End/src/app/pages/vente-historique/vente-historique.component.html
@@ -33,7 +33,7 @@
 <section class="ventes py-3">
     <div class="container">
         <div class="d-flex flex-row-reverse mt-3">
-            <button class="new-vente-btn"><i class="bi bi-plus me-3"></i>Nouvelle vente</button>
+            <button class="new-vente-btn" [routerLink]="['/main/new-vente']"><i class="bi bi-plus me-3"></i>Nouvelle vente</button>
         </div>
         <div class="title mt-3">
             <h3>Vos historiques de ventes</h3>
