Home integration ok

--- a/Front-End/src/app/pages/home/categorie/categorie.component.html
+++ b/Front-End/src/app/pages/home/categorie/categorie.component.html
@@ -4,6 +4,6 @@
             <div class="">{{name}}</div>
             <div class="hover-reaction"><i class="bi bi-arrow-up-right"></i></div>
         </div>
-        <img src="assets/images/categories/categories-01.webp" alt="">
+        <img src="{{url}}" alt="">
     </a>
 </div>
