--- a/Front-End/src/app/pages/home/produit/produit.component.html
+++ b/Front-End/src/app/pages/home/produit/produit.component.html
@@ -1,6 +1,6 @@
 <div class="produit">
     <a href="">
-        <img src="assets/images/1.jpg" alt="">
+        <img src="{{imagePath}}" alt="">
         <div class="props">
             <img src="assets/images/avatar/profile.png" alt="">
             <div class="ms-3">par <span>{{ utilisateur }}</span></div>
