--- a/Front-End/src/app/pages/home/home.component.html
+++ b/Front-End/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
     
     <div class="container">
         <div class="row collections mt-5">
-            <app-categorie *ngFor="let category of categories" name="{{category.nom}}" class="col-6 col-sm-6 col-md-3 mb-3"></app-categorie>
+            <app-categorie *ngFor="let category of categories" name="{{category.nom}}" url="{{category.url}}" class="col-6 col-sm-6 col-md-3 mb-3"></app-categorie>
         </div>
     </div>
 
@@ -27,7 +27,7 @@
                     </button>
                 </div>
 
-                <app-produit *ngFor="let product of products" imagePath="" categorie="{{product.categorie}}" [price]="product.prix" class="col-6 col-sm-6 col-md-3 mb-3"></app-produit>
+                <app-produit *ngFor="let product of products" imagePath="{{product.photo_url}}" categorie="{{product.categorie}}" [price]="product.prix" class="col-6 col-sm-6 col-md-3 mb-3"></app-produit>
             </div>
         </div>
     </div>
