--- a/Front-End/src/app/pages/transaction/transaction.component.html
+++ b/Front-End/src/app/pages/transaction/transaction.component.html
@@ -3,7 +3,7 @@
   <h3 class="mt-1">Historique de tous vos transaction</h3>
 </section>
 
-<main class="container mt-5">
+<main class="container mt-5 mb-4">
   <h4 class="mb-3">Liste de vos transactions</h4>
   <section class="row flex-row-reverse mt-4">
     <div class="col-md-4 px-3">
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="col-md-8 mt-3 mt-md-0 px-4">
-      <table class="table">
+      <table class="table align-middle">
         <thead>
           <tr>
             <th>Date</th>
@@ -64,7 +64,7 @@
             <td>30 000</td>
             <td>Rakoto Andry</td>
             <td>
-              <p class="state-default">En attente</p>
+              <button class="state-default attente">En attente</button>
             </td>
           </tr>
           <tr>
@@ -74,7 +74,7 @@
             <td>30 000</td>
             <td>Rakoto Andry</td>
             <td>
-              <p class="state-default">Livré</p>
+              <button class="state-default livre">Livré</button>
             </td>
           </tr>
           <tr>
@@ -84,7 +84,7 @@
             <td>30 000</td>
             <td>Rakoto Andry</td>
             <td>
-              <p class="state-success">Effectué</p>
+              <button class="state-success effectue">Effectué</button>
             </td>
           </tr>
           <tr>
@@ -94,7 +94,7 @@
             <td>30 000</td>
             <td>Rakoto Andry</td>
             <td>
-              <p class="state-success">Effectué</p>
+              <button class="state-success effectue">Effectué</button>
             </td>
           </tr>
           <tr>
@@ -104,7 +104,7 @@
             <td>30 000</td>
             <td>Rakoto Andry</td>
             <td>
-              <p class="state-success">Effectué</p>
+              <button class="state-success effectue">Effectué</button>
             </td>
           </tr>
           <tr>
@@ -114,7 +114,7 @@
             <td>30 000</td>
             <td>Rakoto Andry</td>
             <td>
-              <p class="state-success">Effectué</p>
+              <button class="state-success effectue">Effectué</button>
             </td>
           </tr>
           <tr>
@@ -124,37 +124,7 @@
             <td>30 000</td>
             <td>Rakoto Andry</td>
             <td>
-              <p class="state-success">Effectué</p>
-            </td>
-          </tr>
-          <tr>
-            <td>10-11-2024</td>
-            <td>Achat produit</td>
-            <td>Lunette de soleil</td>
-            <td>30 000</td>
-            <td>Rakoto Andry</td>
-            <td>
-              <p class="state-success">Effectué</p>
-            </td>
-          </tr>
-          <tr>
-            <td>10-11-2024</td>
-            <td>Achat produit</td>
-            <td>Lunette de soleil</td>
-            <td>30 000</td>
-            <td>Rakoto Andry</td>
-            <td>
-              <p class="state-success">Effectué</p>
-            </td>
-          </tr>
-          <tr>
-            <td>10-11-2024</td>
-            <td>Achat produit</td>
-            <td>Lunette de soleil</td>
-            <td>30 000</td>
-            <td>Rakoto Andry</td>
-            <td>
-              <p class="state-success">Effectué</p>
+              <button class="state-success effectue">Effectué</button>
             </td>
           </tr>
         </tbody>
