--- a/Front-End/src/app/pages/transaction/transaction.component.html
+++ b/Front-End/src/app/pages/transaction/transaction.component.html
@@ -64,7 +64,7 @@
             <td>30 000</td>
             <td>Rakoto Andry</td>
             <td>
-              <button class="state-default attente">En attente</button>
+              <button class="state-default attente">Bien reçue</button>
             </td>
           </tr>
           <tr>
@@ -74,7 +74,7 @@
             <td>30 000</td>
             <td>Rakoto Andry</td>
             <td>
-              <button class="state-default livre">Livré</button>
+              <button class="state-default livre">Bien Livré</button>
             </td>
           </tr>
           <tr>
