--- a/Front-End/src/app/pages/transaction/transaction.component.html
+++ b/Front-End/src/app/pages/transaction/transaction.component.html
@@ -39,6 +39,10 @@
               </div>
             </div>
 
+            <div class="col-12">
+              <button class="mt-4 btn btn-primary w-100">Valider</button>
+            </div>
+
           </section>
         </div>
       </div>
