--- a/Front-End/src/app/components/main-layout/footer/footer.component.html
+++ b/Front-End/src/app/components/main-layout/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 logo mb-4">
-                <img src="assets/logo.webp" alt="">
+                <img src="assets/logov1.png" alt="">
                 <p>A spécial shop for you</p>
                 <div class="link">
                     <i class="bi bi-facebook"></i>
