--- a/Front-End/src/app/pages/home/produit/produit.component.scss
+++ b/Front-End/src/app/pages/home/produit/produit.component.scss
@@ -3,7 +3,8 @@
 
     img {
         width: 100%;
-        max-height: 300px;
+        height: 300px;
+        object-fit: cover;
     }
 
     .props {    
