--- a/Front-End/src/app/components/main-layout/header/banniere/banniere.component.html
+++ b/Front-End/src/app/components/main-layout/header/banniere/banniere.component.html
@@ -1,29 +1,32 @@
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="my-carousel-indicators d-none d-sm-block">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">
-        Acheter
-      </button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2">
-        Vendre
-      </button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="4000">
-        <img src="assets/images/banner/slider01.webp" class="d-block w-100" alt="...">
-        <div class="carousel-content d-sm-block">
-          <h5>D'UN AUTRE MONDE</h5>
-          <p>Des produits spécialement pour vous</p>
-          <button class="">Découvrir <i class="bi bi-arrow-up-right ms-1"></i></button>
-        </div>
+  <div id="ecoindex-badge"></div>
+
+  <div class="my-carousel-indicators d-none d-sm-block">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1">
+      Acheter
+    </button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2">
+      Vendre
+    </button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="4000">
+      <img src="assets/images/banner/slider01.webp" class="d-block w-100" alt="...">
+      <div class="carousel-content d-sm-block">
+        <h5>D'UN AUTRE MONDE</h5>
+        <p>Des produits spécialement pour vous</p>
+        <button class="">Découvrir <i class="bi bi-arrow-up-right ms-1"></i></button>
       </div>
-      <div class="carousel-item" data-bs-interval="4000">
-        <img src="assets/images/banner/slider02.webp" class="d-block w-100" alt="...">
-        <div class="carousel-content d-sm-block">
-            <h5>REVENDEZ FACILEMENT</h5>
-            <p>Un endroit conçu pour les passionnés</p>
-            <button class="d-none d-md-block">Vendre facilement <i class="bi bi-arrow-up-right ms-1"></i></button>
-            <button class="d-block d-md-none">Revendre<i class="bi bi-arrow-up-right ms-1"></i></button>
-        </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="4000">
+      <img src="assets/images/banner/slider02.webp" class="d-block w-100" alt="...">
+      <div class="carousel-content d-sm-block">
+        <h5>REVENDEZ FACILEMENT</h5>
+        <p>Un endroit conçu pour les passionnés</p>
+        <button class="d-none d-md-block">Vendre facilement <i class="bi bi-arrow-up-right ms-1"></i></button>
+        <button class="d-block d-md-none">Revendre<i class="bi bi-arrow-up-right ms-1"></i></button>
       </div>
     </div>
   </div>
+</div>
