--- a/Front-End/src/app/components/main-layout/header/navbar-brand/navbar-brand.component.html
+++ b/Front-End/src/app/components/main-layout/header/navbar-brand/navbar-brand.component.html
@@ -1,5 +1,5 @@
 <div class="navbar-brand">
-    <a href="">
+    <a [routerLink]="['/main/']">
         <img src="/assets/logov1.png" alt="">
     </a>
 </div>
