--- a/Front-End/src/app/pages/compte/compte.component.html
+++ b/Front-End/src/app/pages/compte/compte.component.html
@@ -46,7 +46,7 @@
                     <div class="mx-5">
                         <h5 class="mb-0">Andry RAKOTO</h5>
                         <p class="mt-1 mb-0 telephone">034 41 312 23</p>
-                        <p class="mt-1 mb-0 email">mamiarilaza.to&#64;gmail.com</p>
+                        <p class="mt-1 mb-0 email">rakoto.andry&#64;gmail.com</p>
                     </div>
                     <div class="ms-5">
                         <button class="config-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
