--- a/Front-End/src/app/pages/error/page-not-found/page-not-found.component.html
+++ b/Front-End/src/app/pages/error/page-not-found/page-not-found.component.html
@@ -1,6 +1,8 @@
-<div>
-    <h1>404 Error</h1>
-    <h1>Etes-vous perdu ?</h1>
-    <p>Prener ce vehicule pour retouner dans le monde des barbies</p>
-    <button [routerLink]="['/']">Vroum vroum</button>
+<div class="not-found">
+    <img src="assets/404.jpg" alt="">
+    <div class="text-error">
+        <h1>404 Not Found</h1>
+        <p>La page que vous rechercher est introuvable !</p>
+        <p> <a href="" [routerLink]="['/main/']" >Monter, on va vous ramener</a></p>
+    </div>
 </div>
