--- a/Front-End/src/app/components/main-layout/header/banniere/banniere.component.html
+++ b/Front-End/src/app/components/main-layout/header/banniere/banniere.component.html
@@ -16,7 +16,7 @@
       <div class="carousel-content d-sm-block">
         <h5>D'UN AUTRE MONDE</h5>
         <p>Des produits spécialement pour vous</p>
-        <button class="">Découvrir <i class="bi bi-arrow-up-right ms-1"></i></button>
+        <a href="#liste-produits" class="button">Découvrir <i class="bi bi-arrow-up-right ms-1"></i></a>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="4000">
@@ -24,8 +24,8 @@
       <div class="carousel-content d-sm-block">
         <h5>REVENDEZ FACILEMENT</h5>
         <p>Un endroit conçu pour les passionnés</p>
-        <button class="d-none d-md-block">Vendre facilement <i class="bi bi-arrow-up-right ms-1"></i></button>
-        <button class="d-block d-md-none">Revendre<i class="bi bi-arrow-up-right ms-1"></i></button>
+        <button class="d-none d-md-block" [routerLink]="['/main/new-vente']" >Vendre facilement <i class="bi bi-arrow-up-right ms-1"></i></button>
+        <button class="d-block d-md-none" [routerLink]="['/main/new-vente']">Revendre<i class="bi bi-arrow-up-right ms-1"></i></button>
       </div>
     </div>
   </div>
