--- a/Front-End/src/app/components/main-layout/header/navbar-link/navbar-link.component.html
+++ b/Front-End/src/app/components/main-layout/header/navbar-link/navbar-link.component.html
@@ -2,14 +2,8 @@
     <a href="" class="navbar-link-item d-inline-flex d-xl-none">
         <i class="bi bi-search"></i>
     </a>
-    <a href="" class="navbar-link-item d-inline-flex">
-        <span class="currency">
-            25 Kc
-        </span>
-    </a>
     <a [routerLink]="['/main/transaction']" class="navbar-link-item">
         <i class="bi bi-arrow-left-right"></i>
-        <span class="link-notif">1</span>
     </a>
     <a [routerLink]="['/main/historique-vente']" class="navbar-link-item">
         <i class="bi bi-shop"></i>
@@ -20,7 +14,7 @@
     <div class="dropdown">
         <ul class="dropdown-menu">
             <li><a class="dropdown-item"[routerLink]="['/main/compte']"> <i class="bi bi-person-fill me-2"></i> Mon compte</a></li>
-            <li><a class="dropdown-item" href="#"> <i class="bi bi-door-closed me-2"></i> Se déconnecter</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/page/sign-in']" href="#"> <i class="bi bi-door-closed me-2"></i> Se déconnecter</a></li>
         </ul>
     </div>
 </div>
