--- a/Front-End/src/app/pages/home/home.component.html
+++ b/Front-End/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <div class="produits py-3 mt-5">
+    <div id="liste-produits" class="produits py-3 mt-5">
         <div class="container">
             <div class="title mt-3">
                 <p>Des produits d'un autre monde</p>
