--- a/Front-End/src/app/pages/home/produit/produit.component.html
+++ b/Front-End/src/app/pages/home/produit/produit.component.html
@@ -6,7 +6,7 @@
             <div class="ms-3">par <span>{{ utilisateur }}</span></div>
         </div>
         <div class="name mt-3">
-            {{categorie}}
+            {{titre}}
         </div>
         <div class="price">
             {{price}} <span>Kc</span>
