--- a/Front-End/src/app/pages/product/product-sheet/product-sheet.component.html
+++ b/Front-End/src/app/pages/product/product-sheet/product-sheet.component.html
@@ -9,8 +9,8 @@
       </aside>
     </section>
     <article class="col-md-6 mt-3 mt-md-0">
-      <h2>Lunette de soleil</h2>
-      <p>22Kc</p>
+      <h2>{{ title }}</h2>
+      <p>{{ price }}Kc</p>
       <p>
         <small>Par {{ by }}</small> <span class="ms-3">{{ contact }}</span>
       </p>
